html js " -> ' et couleur fill france.svg

--- a/src/main/resources/templates/essaim/essaimAssociation.html
+++ b/src/main/resources/templates/essaim/essaimAssociation.html
@@ -10,7 +10,7 @@
 				fnInitComplete: function () {
 					$('div.toolbar').html(
 						'<label class="form-label" for="avecEssaim">Avec Essaim</label> <input type="checkbox" id="avecEssaim"/> ');
-					$("#avecEssaim").click(function () {
+					$('#avecEssaim').click(function () {
 						table.draw();
 					});
 				}
