--- a/src/main/resources/templates/evenement/evenementSucreListe.html
+++ b/src/main/resources/templates/evenement/evenementSucreListe.html
@@ -21,7 +21,7 @@
 						exportOptions : {
 							columns : ':visible'
 						},
-						title : "",
+						title : '',
 						action: function (e, dt, node, config)
 						{
 							config.title = Evenements + " " + (new Date()).toLocaleDateString();
