--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,9 +10,7 @@
 				x.type = "password";
 			}
 		}
-		window.onload = function () {
-			document.getElementById("username").focus();
-		}
+		document.addEventListener('DOMContentLoaded', () => document.getElementById("username").focus());
 	</script>
 </head>
 <body>
