--- a/src/main/resources/templates/essaim/essaimCommentaireForm.html
+++ b/src/main/resources/templates/essaim/essaimCommentaireForm.html
@@ -7,8 +7,8 @@
 <script th:replace="include ::  localejsdatetimepicker"></script>
 <script>
 	document.addEventListener('DOMContentLoaded', () => {
-		$("#commentaire").focus();
-		$("#evenementForm").validate({
+		$('#commentaire').focus();
+		$('#evenementForm').validate({
 			errorClass : 'erreur-form',
 			errorPlacement : function(error, element) {
 				error.insertBefore(element.closest('div'));
