--- a/src/main/resources/templates/essaim/essaimForm.html
+++ b/src/main/resources/templates/essaim/essaimForm.html
@@ -8,14 +8,14 @@
 		const essaimNoms = /*[[${essaimNoms}]]*/null;
 		const nomexiste = /*[[#{nomexiste}]]*/null;
 		document.addEventListener('DOMContentLoaded', () => {
-			$("#reineDateNaissance, #dateAcquisition").datetimepicker(
+			$('#reineDateNaissance, #dateAcquisition').datetimepicker(
 				{timepicker: false, format: 'Y-m-d'});
 			$.datetimepicker.setLocale(window.navigator.language.substring(0, 2));
-			$("#nom").focus();
-			jQuery.validator.addMethod("nomExiste", function (value) {
+			$('#nom').focus();
+			jQuery.validator.addMethod('nomExiste', function (value) {
 				return $.inArray(value, essaimNoms) == -1;
 			}, nomexiste);
-			$("#essaimForm").validate({
+			$('#essaimForm').validate({
 				errorClass: 'erreur-form',
 				errorPlacement: function (error, element) {
 					error.insertBefore(element.closest('div'));
