--- a/src/main/resources/templates/essaim/essaimSucreLotForm.html
+++ b/src/main/resources/templates/essaim/essaimSucreLotForm.html
@@ -6,8 +6,8 @@
 <script th:replace="include ::  localejsdatetimepicker"></script>
 <script>
 	document.addEventListener('DOMContentLoaded', () => {
-		$("#valeur").focus();
-		$("#evenementForm").validate({
+		$('#valeur').focus();
+		$('#evenementForm').validate({
 			errorClass: 'erreur-form',
 			errorPlacement: function(error, element) {
 			    error.insertBefore(element.closest('div'));
