--- a/src/main/resources/templates/essaim/essaimTraitementLotForm.html
+++ b/src/main/resources/templates/essaim/essaimTraitementLotForm.html
@@ -7,17 +7,17 @@
 <script th:replace="include ::  localejsdatetimepicker"></script>
 <script>
 	document.addEventListener('DOMContentLoaded', () => {
-		$("#commentaire").focus();
+		$('#commentaire').focus();
 		$('#finTraitement').on(
 				'click',
 				function() {
 					if ($(this).is(':checked')) {
-						$('#typeEvenement').attr('value', "ESSAIMTRAITEMENTFIN");
+						$('#typeEvenement').attr('value', 'ESSAIMTRAITEMENTFIN');
 					} else {
-						$('#typeEvenement').attr('value', "ESSAIMTRAITEMENT");
+						$('#typeEvenement').attr('value', 'ESSAIMTRAITEMENT');
 					}
 				});
-		$("#evenementForm").validate({
+		$('#evenementForm').validate({
 			errorClass: 'erreur-form',
 			errorPlacement: function(error, element) {
 			    error.insertBefore(element.closest('div'));
