--- a/src/main/resources/templates/essaim/essaimDispersionForm.html
+++ b/src/main/resources/templates/essaim/essaimDispersionForm.html
@@ -19,7 +19,7 @@
 	    $('.popover-dismiss').popover({
 	        trigger: 'focus'
 	    });
-		$('#commentaire').focus();
+		document.getElementById('commentaire').focus();
 		$('#evenementForm').validate({
 			errorClass: 'erreur-form',
 			errorPlacement: function(error, element) {
