--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:src="@{/js/ruches/rucheDetail.js}"></script>
 	<script th:inline="javascript">
 		const _csrf_token = /*[[${_csrf.token}]]*/ null;
 		const _csrf_param_name = /*[[${_csrf.parameterName}]]*/ null;
@@ -17,75 +18,7 @@
 		const creer = /*[[#{creer}]]*/ null;
 		const urlclone = /*[[@{/ruche/clone/}]]*/ null;
 		const rucheid = /*[[${ruche.id}]]*/ null;
-		document.addEventListener('DOMContentLoaded', () => {
-			document.getElementById('supprime').addEventListener("click", (event) => {
-				if (recolteHausses) {
-					alert(rnpsupprec);
-				} else if (evenements > 0) {
-					if (confirm(suppreven)) {
-						return true;
-					}
-				} else {
-					if (confirm(suppruche)) {
-						return true;
-					}
-				}
-				event.preventDefault();
-				return false;
-			});
-			$("#clone").click(function () {
-				function annule() {
-					while (iajout--) {
-						ruchenoms.pop();
-					}
-				}
-				const noms = prompt(nruchvirg);
-				let iajout = 0;
-				if (noms == null || noms == "") {
-					return;
-				}
-				const tabNomExiste = [];
-				const tabNomOk = [];
-				/*[- filter supprime les noms vides ou blancs -]*/
-				/*[- map trim supprime les blancs aux extrémités des noms -]*/
-				noms.split(',').filter(s => s.trim()).map(item => item.trim()).forEach(function (item) {
-					if ($.inArray(item, ruchenoms) !== -1) {
-						tabNomExiste.push(item);
-					} else {
-						/*[- on crée la ruche item -]*/
-						tabNomOk.push(item);
-						/*[- ce nom ne doit pas être réutilisé -]*/
-						ruchenoms.push(item);
-						iajout++;
-					}
-				});
-				if (tabNomExiste.length > 0) {
-					const promptexistedeja = Ruches + ' : ' + tabNomExiste.join(',') + ' ' + nexisted;
-					if (tabNomOk.length == 0) {
-						alert(promptexistedeja);
-						return;
-					}
-					if (!confirm(promptexistedeja + '. ' + creer + ' ' + tabNomOk.join(',') + ' ?')) {
-						annule();
-						return;
-					}
-				} else if (tabNomOk.length === 0) {
-					return;
-				} else {
-					if (!confirm(creer + ' ' + tabNomOk.join(',') + ' ?')) {
-						annule();
-						return;
-					}
-				}
-				const requestData = {nomclones: tabNomOk.join(',')};
-				requestData[_csrf_param_name] = _csrf_token;
-				$.post(urlclone + rucheid,
-					requestData).done(function (data) {
-						alert(data);
-						document.location.reload(true);
-					});
-			});
-		});
+		document.addEventListener('DOMContentLoaded', rucheDetail);
 	</script>
 </head>
 
