--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -16,7 +16,7 @@
 		const buttontextprint = /*[[#{buttontextprint}]]*/ null;
 		const buttontextcol = /*[[#{buttontextcol}]]*/ null;
 		document.addEventListener('DOMContentLoaded', () => {
-			document.getElementById('supprime').addEventListener("click", (event) => {
+			document.getElementById('supprime').addEventListener('click', (event) => {
 				if (rucherDepot) {
 					alert(depotNPES);
 
