--- a/src/main/resources/templates/essaim/essaimTraitementForm.html
+++ b/src/main/resources/templates/essaim/essaimTraitementForm.html
@@ -7,7 +7,7 @@
 <script th:replace="include ::  localejsdatetimepicker"></script>
 <script>
 	document.addEventListener('DOMContentLoaded', () => {
-		$('#commentaire').focus();
+		document.getElementById('commentaire').focus();
 		$('#finTraitement').on('click', function() {
 			if ($(this).is(':checked')) {
 				$('#typeEvenement').attr('value', 'ESSAIMTRAITEMENTFIN');
