--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,14 +3,14 @@
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 	<script th:inline="javascript">
 		function showhidepass() {
-			const x = document.getElementById("password");
-			if (x.type === "password") {
-				x.type = "text";
+			const x = document.getElementById('password');
+			if (x.type === 'password') {
+				x.type = 'text';
 			} else {
-				x.type = "password";
+				x.type = 'password';
 			}
 		}
-		document.addEventListener('DOMContentLoaded', () => document.getElementById("username").focus());
+		document.addEventListener('DOMContentLoaded', () => document.getElementById('username').focus());
 	</script>
 </head>
 <body>
