--- a/src/main/resources/templates/recolte/recolteForm.html
+++ b/src/main/resources/templates/recolte/recolteForm.html
@@ -7,8 +7,8 @@
 <script th:replace="include ::  localejsdatetimepicker"></script>
 <script th:inline="javascript">
 	document.addEventListener('DOMContentLoaded', () => {
-		$("#typeMiel").focus();
-		$("#recolteForm").validate({
+		document.getElementById('typeMiel').focus();
+		$('#recolteForm').validate({
 			errorClass : 'erreur-form',
 			errorPlacement : function(error, element) {
 				error.insertBefore(element.closest('div'));
@@ -24,7 +24,7 @@
 		});
 		/*[- Pour trier les noms de types de miel -]*/
 		const selOpt = $("#typeMiel").val();
-		$("#typeMiel").html($("#typeMiel option").sort(function(a, b) {
+		$('#typeMiel').html($('#typeMiel option').sort(function(a, b) {
 			return a.text == b.text ? 0 : a.text < b.text ? -1 : 1;
 		})).val(selOpt);
 	});
