--- a/src/main/resources/templates/ruche/rucheForm.html
+++ b/src/main/resources/templates/ruche/rucheForm.html
@@ -11,7 +11,7 @@
 			$("#dateAcquisition").datetimepicker(
 				{timepicker: false, format: 'Y-m-d'});
 			$.datetimepicker.setLocale(window.navigator.language.substring(0, 2));
-			$("#nom").focus();
+			document.getElementById('nom').focus();
 			jQuery.validator.addMethod("nomExiste", function (value) {
 				return $.inArray(value, rucheNoms) == -1;
 			}, nomexiste);
