--- a/src/main/resources/templates/ruche/rucheRucherForm.html
+++ b/src/main/resources/templates/ruche/rucheRucherForm.html
@@ -10,11 +10,11 @@
 	const timeFirst = /*[[${timeFirst}]]*/null;
 	const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
 	document.addEventListener('DOMContentLoaded', () => {
-		$.validator.addMethod("greaterThanEqual", function(value, element, param) {
+		$.validator.addMethod('greaterThanEqual', function(value, element, param) {
 			return Date.parse(value) > Date.parse(param);
 		}, doitEtreSupA + ' {0}');
-		$("#rucherId").focus();
-		$("#evenementForm").validate({
+		document.getElementById('rucherId').focus();
+		$('#evenementForm').validate({
 			errorClass : 'erreur-form',
 			errorPlacement : function(error, element) {
 				error.insertBefore(element.closest('div'));
