--- a/src/main/resources/templates/rucher/rucherCommentaireForm.html
+++ b/src/main/resources/templates/rucher/rucherCommentaireForm.html
@@ -6,8 +6,8 @@
 <script th:replace="include ::  localejsdatetimepicker"></script>
 <script th:inline="javascript">
 	document.addEventListener('DOMContentLoaded', () => {
-		$("#commentaire").focus();
-		$("#evenementForm").validate({
+		document.getElementById('commentaire').focus();
+		$('#evenementForm').validate({
 			errorClass: 'erreur-form',
 			errorPlacement: function(error, element) {
 			    error.insertBefore(element.closest('div'));
