--- a/src/main/resources/templates/rucher/rucherForm.html
+++ b/src/main/resources/templates/rucher/rucherForm.html
@@ -6,17 +6,16 @@
 	const nomexiste = /*[[#{nomexiste}]]*/ null;
 	const rucherNoms = /*[[${rucherNoms}]]*/ null;
 	document.addEventListener('DOMContentLoaded', () => {
-		$("#nom").focus();
-		jQuery.validator.addMethod("nomExiste", function(value) {   
+		document.getElementById('nom').focus();
+		jQuery.validator.addMethod('nomExiste', function(value) {   
     		return $.inArray(value, rucherNoms) == -1;
 			}, nomexiste);
-		$("#rucherForm").validate({
+		$('#rucherForm').validate({
 			errorClass: 'erreur-form',
 			errorPlacement: function(error, element) {
 			    error.insertBefore(element.closest('div'));
 			},
 			rules : {
-				/*
 				nom : {
 					required : true,
 					nomExiste : true,
@@ -24,7 +23,6 @@
 						return $.trim(value);
 					}
 				}
-				*/
 			}
 		});
 	});
