--- a/src/main/resources/templates/rucher/ruchersListe.html
+++ b/src/main/resources/templates/rucher/ruchersListe.html
@@ -17,10 +17,10 @@
 						columns: ':visible'
 					},
 					action: function (e, dt, node, config) {
-						config.title = Ruchers + " " + (new Date()).toLocaleDateString();
+						config.title = Ruchers + ' ' + (new Date()).toLocaleDateString();
 						const inputSearch = table.search();
 						if (inputSearch.length !== 0) {
-							config.title += " <" + inputSearch + ">";
+							config.title += ' <' + inputSearch + '>';
 						}
 						$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
 					},
